@@ -74,7 +74,6 @@ extern int		IDL_ns_check_for_ambiguous_inheritance
 							(IDL_tree interface_ident,
 							 IDL_tree p);
 extern void		IDL_tree_process_forward_dcls	(IDL_tree *p, IDL_ns ns);
-extern void		IDL_tree_remove_inhibits	(IDL_tree *p, IDL_ns ns);
 extern void		IDL_tree_remove_empty_modules	(IDL_tree *p, IDL_ns ns);
 
 extern void		__IDL_free_properties		(GHashTable *table);
